--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@fastify/cors": "^8.5.0",
+    "@fastify/multipart": "^8.1.0",
     "fastify": "^4.25.2"
   }
 }
