--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,8 +1,9 @@
-FROM node:20.11.0-alpine3.19
+FROM node:20.11.0
 ENV NODE_ENV development
 WORKDIR /opt/app
+RUN mkdir -p certstore
 COPY package*.json ./
-RUN npm i
+RUN npm install
 COPY . ./
 EXPOSE 443
 ENTRYPOINT ["npm"]
