--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "rm -rf dist && npx tsc -p tsconfig.json",
-    "dev": "npx nodemon src/server.ts",
+    "dev": "npx nodemon -e 'ts, css, json' -x 'node --no-warnings --loader ts-node/esm src/server.ts'",
     "start": ""
   },
   "author": "Shivam Malhotra",
