--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "dependencies": {
     "@fastify/cors": "^8.5.0",
+    "@fastify/env": "^4.3.0",
     "@fastify/multipart": "^8.1.0",
+    "@sendgrid/mail": "^8.1.0",
     "fastify": "^4.25.2"
   }
 }
