--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,9 @@ services:
     ports:
       - "443:443"
     depends_on:
-      nginx-proxy-manager:
+      mongodb:
         condition: service_healthy
+  mongodb:
+    image: mongo:latest
+    ports:
+      - "27017:27017"
