--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "rm -rf dist && npx tsc -p tsconfig.json",
-    "dev": "npx nodemon -e 'ts, css, json' -x 'node --no-warnings --loader ts-node/esm src/server.ts'",
+    "dev": "npx nodemon -e 'ts, css, json' -x 'NODE_ENV=development node --no-warnings --loader ts-node/esm src/server.ts'",
     "start": ""
   },
   "author": "Shivam Malhotra",
@@ -20,6 +20,7 @@
   "dependencies": {
     "@fastify/cors": "^8.5.0",
     "@fastify/env": "^4.3.0",
+    "@fastify/mongodb": "^8.0.0",
     "@fastify/multipart": "^8.1.0",
     "@sendgrid/mail": "^8.1.0",
     "fastify": "^4.25.2"
